chore: downgrade maven java version to 8 for compatibility
Replaces Java 21 features with Java 8 alternatives:
- Ensures plugin compiles and runs on Spigot servers from 1.13.x up to 1.21.x.
- Use traditional classes instead of records.
- Replace text blocks with concatenated strings.
- Update optional handling to use isPresent()/get() instead of ifPresentOrElse.
- Replace String.isBlank() with String.trim().isEmpty()
- Downgrade switch expressions