@@ -22,6 +22,7 @@ import java.io.File;
 import java.io.InputStream;
 import java.util.Collection;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @SuppressWarnings({"UnstableApiUsage"})
 public class FoliaPlatform implements Platform {
@@ -83,7 +84,7 @@ public class FoliaPlatform implements Platform {
         return Bukkit.getOnlinePlayers()
                 .stream()
                 .map(Entity::getUniqueId)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -116,7 +117,8 @@ public class FoliaPlatform implements Platform {
 
     @Override
     public PlatformSender wrapSender(final Object sender) {
-        if(sender instanceof CommandSender commandSender) {
+        if(sender instanceof CommandSender) {
+            final CommandSender commandSender = (CommandSender) sender;
             return new FoliaPlatformSender(commandSender);
         }
 
